--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
+        show_sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
 
   mvc:
     pathmatch:
